# trading-journal

./: .env.devapp  .gitignore  .prettierignore  AGENTS.md  README.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: AGENTS.md
.github/workflows/: release-installers.yml
docs/: AGENTS.md
docs/checkpoints/: 2026-07-03-trading-journal-progress.md  (+7 more)
src/: AGENTS.md  main.tsx  styles.css  vite-env.d.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_pretrade.sql  0003_trade_workflow.sql  0004_accounts.sql  0005_strategy_rules.sql  0006_risk_plan_limits.sql  0007_account_context.sql  0008_trade_recap_structure.sql  0009_system_accounts.sql  0010_educator_strategy.sql  0011_backtest_workflow.sql  0012_strategy_currency_pairs.sql  0013_educator_strategies.sql  0014_strategy_target_plans.sql  AGENTS.md
src-tauri/src/: backup.rs  capture.rs  lib.rs  main.rs  migrations.rs
src-tauri/windows/: installer-hooks-dev.nsh  installer-hooks.nsh
tests/: AGENTS.md  accountSetupValidation.test.ts  appPreferences.test.ts  dashboardAnalytics.test.ts  localDates.test.ts  moduleRegistry.test.ts  newTradeSubmission.test.ts  recapAnalysis.test.ts  screenshotTools.test.ts  strategyOptions.test.ts  strategyQueries.test.ts  strategyWorkflow.test.ts  tradeInstruments.test.ts  tradeNames.test.ts  tradeRecapWorkflow.test.ts  tradingPlan.test.ts  workspaceRegistry.test.ts
(+69 files in other folders)
