[package]
name = "trading-journal"
version = "0.1.0"
description = "Trading Journal desktop app"
authors = ["Mykey"]
edition = "2021"

[lib]
name = "trading_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-updater = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9.6"
image = { version = "0.25", default-features = false, features = ["png"] }
